--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let item of users | async">
   <p>{{ item.name }}</p>
 </div>
-
+<p>New info</p>
 <p class="tw-text-xl">{{ buildTranslationKey('test') | translate }}</p>
 
 <div class="container">
